<resources>
    <string name="app_name">Shonic</string>

    <!-- Sign Up -->
    <string name="sign_up_title">Daftar</string>
    <string name="sign_up_text_button_log_in">Masuk</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_next_button">Lanjut</string>
    <string name="sign_up_or">atau</string>
    <string name="sign_up_google_log_in_button">Masuk dengan Google</string>
    <string name="sign_up_term_of_use">"Dengan mendaftar, saya menyetujui Syarat dan "</string>
    <string name="sign_up_privacy_policy">Ketentuan serta Kebijakan Privasi</string>

    <!-- Sign Up Verification -->
    <string name="sign_up_verification_title">Verifikasi Akun</string>
    <string name="sign_up_verification_description">Kode berhasil dikirim melalui email \n<b>%1$s</b>, periksa dan masukan kode \ndisini untuk dapat membuat akun baru.</string>
    <string name="sign_up_verification_resend_button">Mohon tunggu dalam %1$d detik untuk kirim ulang</string>
    <string name="sign_up_verification_error_code">Kode yang anda masukan salah</string>

    <!-- Complete Sign Up -->
    <string name="complete_sign_up_title">Lengkapi Pendaftaran</string>
    <string name="complete_sign_up_full_name">Nama Lengkap</string>
    <string name="complete_sign_up_password">Password</string>
    <string name="complete_sign_up_confirm_password">Konfirmasi Password</string>
    <string name="complete_sign_up_button">Selesai</string>

    <!-- Log In -->
    <string name="log_in_title">Masuk</string>
    <string name="log_in_text_button_sign_up">Daftar</string>
    <string name="log_in_email_hint">Email</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_forgot_password_button">Lupa password?</string>
    <string name="log_in_button">Masuk</string>
    <string name="log_in_or">atau</string>
    <string name="log_in_google_log_in_button">Masuk dengan Google</string>

    <!-- Forgot Password -->
    <string name="forgot_password_title">Ganti Password</string>
    <string name="forgot_password_description">Masukkan email yang terdaftar pada akun \nShonic untuk mengatur ulang password Anda.</string>
    <string name="forgot_password_email_hint">Email</string>
    <string name="forgot_password_next_button">Lanjut</string>
    <string name="forgot_password_back_to_log_in_or_sign_up_text_button">Kembali ke halaman Masuk atau Daftar</string>

    <!-- Forgot Password Verification -->
    <string name="forgot_password_verification_title">Verifikasi Akun</string>
    <string name="forgot_password_verification_description">Kode berhasil dikirim melalui email \n<b>%1$s</b>, periksa dan masukan kode \ndisini untuk dapat melakukan reset password.</string>
    <string name="forgot_password_verification_resend_button">Mohon tunggu dalam %1$d detik untuk kirim ulang</string>

    <!-- New Password -->
    <string name="new_password_title">Atur Ulang Password</string>
    <string name="new_password">Password Baru</string>
    <string name="new_password_confirm">Konfirmasi Password Baru</string>
    <string name="new_password_button_save">Simpan</string>

    <!-- Password Changed -->
    <string name="password_changed_illustration_description">Ilustrasi Password telah berubah</string>
    <string name="password_changed_title">Password berhasil diubah</string>
    <string name="password_changed_description">Silakan masuk ke akunmu dengan password yang baru</string>
    <string name="password_changed_button">Masuk</string>
    <string name="password_changed_button_to_home">Kembali ke Beranda</string>

    <!-- Error -->
    <string name="error_field_required">Nama lengkap atau password tidak boleh kosong</string>
    <string name="error_password_not_match">Password tidak sama</string>
    <string name="sign_up_success">Berhasil membuat akun silahkan login</string>
    <string name="error_login">Email dan/atau password anda salah</string>
    <string name="error_ubah_password">Tidak ada akun dengan email tersebut</string>

</resources>