<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.password.passwordchanged.PasswordChangedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/password_changed_illustration_description"
            android:src="@drawable/password_changed_illustration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_bold"
            android:letterSpacing="-0.025"
            android:text="@string/password_changed_title"
            android:textAlignment="center"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/opensans_regular"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="1.5dp"
            android:text="@string/password_changed_description"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_password_changed_to_log_in"
            style="@style/Button.MaterialComponents.Outlined"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/opensans_medium"
            android:includeFontPadding="false"
            android:letterSpacing="0.01"
            android:text="@string/password_changed_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_password_changed_to_home"
            style="@style/Button.MaterialComponents.Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/opensans_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.01"
            android:text="@string/password_changed_button_to_home"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>