<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LogInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_log_in"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="5dp"
        android:paddingStart="6dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:id="@+id/ll_log_in_btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ripple_background"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/all_arrow_back_default" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingBottom="1dp"
            android:text="@string/log_in_title"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_log_in_text_btn_sign_up"
            style="@style/textStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/opensans_medium"
            android:includeFontPadding="false"
            android:text="@string/log_in_text_button_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_log_in_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/log_in_email_hint"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/et_log_in_password"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconDrawable="@drawable/ic_clear"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_log_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_log_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_medium"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:letterSpacing="0.02"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_log_in_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="13dp"
        android:hint="@string/log_in_password_hint"
        android:imeOptions="actionDone"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconDrawable="@drawable/ic_eye"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_log_in_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_log_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_medium"
            android:inputType="textNoSuggestions|textPassword"
            android:letterSpacing="0.02"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_log_in_btn_forgot_password"
        style="@style/textStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/opensans_medium"
        android:includeFontPadding="false"
        android:text="@string/log_in_forgot_password_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/til_log_in_password"
        app:layout_constraintTop_toBottomOf="@+id/til_log_in_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_log_in"
        style="@style/Button.MaterialComponents.Outlined"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:fontFamily="@font/opensans_medium"
        android:includeFontPadding="false"
        android:letterSpacing="0.01"
        android:text="@string/log_in_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_log_in_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/v_log_in_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="@+id/tv_log_in_or"
        app:layout_constraintEnd_toStartOf="@+id/tv_log_in_or"
        app:layout_constraintStart_toStartOf="@+id/btn_log_in"
        app:layout_constraintTop_toTopOf="@+id/tv_log_in_or" />

    <View
        android:id="@+id/v_log_in_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="@+id/tv_log_in_or"
        app:layout_constraintEnd_toEndOf="@+id/btn_log_in"
        app:layout_constraintStart_toEndOf="@+id/tv_log_in_or"
        app:layout_constraintTop_toTopOf="@+id/tv_log_in_or" />

    <TextView
        android:id="@+id/tv_log_in_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/log_in_or"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_log_in_google_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_log_in_google_log_in"
        style="@style/Button.MaterialComponents.Google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="-75dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:letterSpacing="0.01"
        android:paddingStart="95dp"
        android:paddingTop="4dp"
        android:text="@string/log_in_google_log_in_button"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>