<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.password.forgotpassword.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="5dp"
        android:paddingStart="6dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:id="@+id/ll_forgot_password_btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ripple_background"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/all_arrow_back_default" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingBottom="1dp"
            android:text="@string/forgot_password_title"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_error_ubah_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawablePadding="8dp"
        android:visibility="gone"
        android:paddingStart="16dp"
        android:text="@string/error_ubah_password"
        android:paddingTop="12dp"
        android:textSize="14sp"
        android:paddingEnd="16dp"
        android:textColor="#CB3A31"
        android:background="@drawable/combine_color"
        app:drawableStartCompat="@drawable/ic_error_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_forgot_password" />

    <TextView
        android:id="@+id/tv_sign_up_verification_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/opensans_regular"
        android:includeFontPadding="false"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="1.5dp"
        android:text="@string/forgot_password_description"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_ubah_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgot_password_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/forgot_password_email_hint"
        android:imeOptions="actionDone"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconDrawable="@drawable/ic_clear"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_verification_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_medium"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:letterSpacing="0.02"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_forgot_password"
        style="@style/Button.MaterialComponents.Outlined"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:fontFamily="@font/opensans_medium"
        android:includeFontPadding="false"
        android:letterSpacing="0.01"
        android:text="@string/forgot_password_next_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password_to_log_in_or_sign_up_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password_to_log_in_or_sign_up_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/opensans_medium"
        android:letterSpacing="0.01"
        android:text="@string/forgot_password_back_to_log_in_or_sign_up_text_button"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>